# peace

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.yaml.example  pnpm-lock.yaml  pyproject.toml
.claude/agents/: opus-coding-specialist.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/ui/ui/: app.slint
python/api/: __init__.py  __main__.py  asgi.py  cli.py  config.py  dependencies.py  main.py
python/api/crud/: __init__.py  user.py
python/api/db/: __init__.py  session.py  sql.py  vector.py
python/api/models/: __init__.py  user.py
python/api/routes/: __init__.py  app.py  users.py
python/api/tests/: conftest.py  test_config.py  test_db.py  test_main.py  test_user.py  test_user_crud.py  test_user_routes.py  test_vector.py
python/config/: __init__.py  settings.py
python/domain/: __init__.py
python/domain/user/: __init__.py  models.py  repository.py
python/domain/video/: __init__.py  models.py  repository.py
python/example/: __init__.py  hello.py
python/infra/: __init__.py
python/infra/agent/: __init__.py  client.py  dependencies.py  exceptions.py  prompts.py  summary_template.html.tpl
python/infra/agent/tests/: test_client.py
python/infra/api/: __init__.py  __main__.py  asgi.py  cli.py  dependencies.py  main.py  security.py
python/infra/api/routes/: __init__.py  agent.py  app.py  audio.py  exceptions.py  users.py
python/infra/api/tests/: conftest.py  test_user.py  test_user_repository.py  test_user_routes.py  test_vector.py
python/infra/db/: __init__.py  session.py  sql.py  vector.py
python/infra/whisper/: __init__.py  audio.py  client.py  dependencies.py  exceptions.py  models.py
python/infra/whisper/tests/: __init__.py  conftest.py  test_audio.py  test_client.py  test_client_concurrency.py  test_client_multi_chunk.py  test_dependencies.py  test_exceptions.py  test_models.py  update_fixtures.py
python/infra/youtube/: __init__.py  client.py  dependencies.py  exceptions.py  models.py
python/infra/youtube/tests/: __init__.py  conftest.py  helpers.py  test_async_concurrency.py  test_client.py  test_download.py  test_exceptions.py  test_info.py  test_models.py  test_transcription.py  update_fixtures.py
python/infra/youtube/tests/fixtures/: README.md  video_basic.json  video_with_subs.json
python/yt/: __init__.py  downloader.py  exceptions.py  models.py
python/yt/tests/: conftest.py  test_downloader.py  update_fixtures.py
python/yt/tests/fixtures/: video_basic.json  video_with_subs.json
