[workspace]
resolver = "3"
members = [
	"crates/cli",
	"crates/core"
]

[workspace.dependencies]
peace-core = { path = "crates/core" }
lexopt = "0.3.1"
indoc = "2.0.7"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
#slint = "1.11"
#slint-build = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
