[project]
name = "peace"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "thomas", email = "thomas.chiantia@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "polars>=1.35.2",
    "qdrant-client>=1.16.0",
    "yt-dlp>=2025.11.12",
    # FastAPI stack
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Configuration
    "ruamel.yaml>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/example", "python/api"]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

# Ruff configuration
[tool.ruff]
# Set the target Python version
target-version = "py311"
line-length = 100

# Enable auto-fixing
fix = true

[tool.ruff.lint]
# Enable recommended rules + type checking rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py
"__init__.py" = ["F401"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
mypy_path = "."
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# Per-module options for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = ["qdrant_client.*", "sqlmodel.*", "alembic.*"]
ignore_missing_imports = true

# Pylsp configuration
[tool.pylsp]
plugins.jedi.environment = ".venv/bin/python"
plugins.jedi.extra_paths = [".venv/lib/python3.11/site-packages"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["python/api/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage configuration
[tool.coverage.run]
source = ["python/api"]
omit = [
    "python/api/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
